Improve behaviors of ledgermonolith scripts, VM starts PostgreSQL